k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixelmind
  labels:
    app: pixelmind
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pixelmind
  template:
    metadata:
      labels:
        app: pixelmind
    spec:
      containers:
        - name: pixelmind
          image: shubhsemwal/pixelmind:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /api/auth/session
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/auth/session
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
